--- a/app/views/shared/_landing_nav.html.erb
+++ b/app/views/shared/_landing_nav.html.erb
@@ -5,13 +5,13 @@
   
   <div class="flex-1 flex justify-end">
     <% if user_signed_in? %>
-      <div class="bg-white flex items-center justify-center border-slate-300 rounded-2xl w-[20rem] h-[3.2rem]">
+      <div class="bg-white/90 flex items-center justify-center border-slate-300 rounded-3xl w-[25rem] h-[3.2rem]">
         <ul class="flex items-center justify-center gap-10 text-sm font-normal text-black">
           <li>
             <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:text-gray-600" %>
           </li>
           <li class="text-black hover:text-gray-600">
-            <%= link_to "Edit", edit_user_registration_path %>
+            <%= link_to "Edit Profile", edit_user_registration_path %>
           </li>
           <li>
             <%= button_to "Sign Out", destroy_user_session_path, 
