--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -13,13 +13,13 @@
         </p>
     </div>
     <div class="grid grid-cols-8 gap-6 max-w-7xl w-full mx-20 p-4 rounded-md my-12 grid-flow-dense">
-        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4" style={{backgroundColor: "#f5f5f5"}}></div>
-        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
-        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1" style={{backgroundColor: "#f5f5f5"}}></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-4 bg-slate-400"></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1 bg-slate-400"></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1 bg-slate-400"></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-2 row-span-1 bg-slate-400"></div>
+        <div class="rounded-md border relative min-h-36 grid-flow-dense col-span-3 row-span-1 bg-slate-400"></div>
     </div>
-   <div class="block align-middle justify-start my-10">
+   <div class="block align-middle justify-start my-10 text-2xl">
          <span class="font-bold italic">We're looking for leaders with:</span>
             <ul>
                 <li>• At least four years of experience in their field</li>
@@ -37,31 +37,37 @@
         <h2 class="font-bold text-3xl">We place our trainees in various fields</h2>
         <p class="mb-5 text-xl">Sales, Customer Success, Software Development, Project Management, and more at companies including:</p>
         <div class="flex row justify-between">
-            <%= image_tag 'companies/CIBC.svg', class: 'h-20' %>
-            <%= image_tag 'companies/HCSC.svg', class: 'h-20'  %>
-            <%= image_tag 'companies/SAP.svg', class: 'h-20'  %>
-            <%= image_tag 'companies/ULS.svg', class: 'h-20'  %>
+            <%= image_tag 'companies/ULS.svg', class: 'sm:h-12 md:h-20'  %>
+            <%= image_tag 'companies/SAP.svg', class: 'sm:h-12 md:h-20'  %>
+            <%= image_tag 'companies/CIBC.svg', class: 'sm:h-12 md:h-20' %>
+            <%= image_tag 'companies/United.svg', class: 'sm:h-12 md:h-20' %>
+            <%= image_tag 'companies/HCSC.svg', class: 'sm:h-12 md:h-20'  %>
         </div>
    </div>
    <div class="my-32 w-80">
         <p class="text-2xl">If you're unable to commit to a long-term mentorship, then <span class="font-bold">join us for a Riverside Chat!</span></p>
    </div>
    <div class="mb-10">
-        <p>What is a</p>
-        <h3 class="text-3xl font-bold mb-5">Riverside</h3>
-        <p><span class="font-bold italic">Get to know the DPI team</span> and hear from our talent network by joining us for a Riverside Chat! This ia a casual question-and-answer session where our staff will explore your background and the "whys" behind your success.</p>
-        <p><span class="font-bold italic">Riverside Chats</span> present a unique opportunity to meet our trainees and answer their insightful questions about your field of work. We've had cutting-edge leaders from companies like Salesforce, Capital One, ShipBob, and Bank of America join us for Riversides.</p>
-        <p>Along with the trainees, we'll discuss how DPI can <span class="font-bold italic">boost your business</span> through our Tech Accelerator.</p>
-   </div>
-   <div>
-        <div class="gradient gradient-left"></div>
-        <div class="gradient gradient-right"></div>
-        <div>Make an Impact Today!</div>
+        <p class="text-2xl">What is a</p>
+        <h3 class="text-6xl font-bold mb-5">Riverside</h3>
         <div>
-            <div>
-                <p>Whether it's through mentorship or just a few hours at a Riverside Chat, you can permanently change the future of technology in Illinois. This small commitment can make a difference in someone's life and career trajectory.</p>
-                <p>We appreciate your interest in spending time with DPI. If you'd like to learn more, please send an email and we'll be in touch soon.</p>
-                <button>Contact DPI</button>
+            <p class="text-xl my-5"><span class="font-bold italic">Get to know the DPI team</span> and hear from our talent network by joining us for a Riverside Chat! This is a casual question-and-answer session where our staff will explore your background and the "whys" behind your success.</p>
+            <div></div>
+        </div>
+        <p class="text-xl my-5"><span class="font-bold italic">Riverside Chats</span> present a unique opportunity to meet our trainees and answer their insightful questions about your field of work. We've had cutting-edge leaders from companies like Salesforce, Capital One, ShipBob, and Bank of America join us for Riversides.</p>
+        <p class="text-xl my-5">Along with the trainees, we'll discuss how DPI can <span class="font-bold italic">boost your business</span> through our Tech Accelerator.</p>
+   </div>
+   <div class="mb-80 mt-64">
+        <div>
+            <div class="grid grid-cols-6">
+                <div class="gradient gradient-left"></div>
+                <div class="gradient gradient-right"></div>
+                <div class="text-5xl font-black col-span-3">Make an Impact Today!</div>
+                <div class="bg-red-500 text-xl col-span-3">
+                    <p class="mb-5">Whether it's through mentorship or just a few hours at a Riverside Chat, you can permanently change the future of technology in Illinois. This small commitment can make a difference in someone's life and career trajectory.</p>
+                    <p class="mb-5">We appreciate your interest in spending time with DPI. If you'd like to learn more, please send an email and we'll be in touch soon.</p>
+                    <button class="place-self-center bg-black text-white p-3 rounded-lg flex row align-center justify-items-center"><p>Contact DPI</p> <%= image_tag 'icon/right_circle.png', class: 'h-5 ml-2 self-center' %></button>
+                </div>
             </div>
         </div>
    </div>
