--- a/app/views/dashboard/_short_list_confirm.html.erb
+++ b/app/views/dashboard/_short_list_confirm.html.erb
@@ -1,7 +1,7 @@
 <div id="confirmation-modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
   <div class="bg-white rounded-[0.75rem] w-[80%] p-[2rem] max-w-md text-center">
     <div class="flex flex-col gap-2 items-center">
-      <img src="<%= asset_path("icon/check_one.svg") %>" alt="close" class="w-[2.5rem] h-[2.5rem]">
+      <img src="<%= asset_path("icon/check_one.svg") %>" alt="close" class="w-[2.5rem] h-[2.5rem]" loading="lazy">
       <div class="flex flex-col gap-0.5">
         <h2 class="text-[#202020] text-lg font-semibold">Sure you want to submit?</h2>
         <p class="text-xs text-[#898989] text-center">Just a heads-up-changes can’t be made after!</p>
