--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -1,34 +1,43 @@
-<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1.3rem] h-[80vh]">
+<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1rem] h-[80vh]">
   <%= render partial: "admin_sidebar" %>
-  <main class="w-[calc(100%-22rem)] p-6">
-    <h1 class="text-2xl font-bold mb-2">Hi <%= current_user.first_name %>!</h1>
-    <p class="text-gray-500 mb-6">Welcome back to the Mentorship dashboard</p>
-
-    <div class="flex justify-end space-x-4 mb-6">
-      <button id="viewAdminsBtn" class="text-gray-500 flex items-center hover:text-gray-700" onclick="openModal('program-admin-modal')">
-        <i class="fa-solid fa-users pr-2"></i>View Admins
-      </button>
-      <button id="openModalBtn" class="text-gray-500 flex items-center hover:text-gray-700" onclick="openModal('new-admin-modal')">
-        <i class="fa-solid fa-plus pr-2"></i>New Admin
-      </button>
+  <main class="w-[calc(100%-22rem)]">
+    <h1 class="text-[2rem] text-[#202020] font-bold mb-2">Hi <%= current_user.first_name %>!</h1>
+    <div class="flex justify-between text-[#898989] mb-5">
+      <p>Welcome back to the Mentorship dashboard</p>
+      <div class="flex justify-end space-x-4">
+        <button id="viewAdminsBtn" class="flex items-center hover:text-gray-700" onclick="openModal('program-admin-modal')">
+          <i class="fa-solid fa-users pr-2"></i>View Admins
+        </button>
+        <button id="openModalBtn" class="flex items-center hover:text-gray-700" onclick="openModal('new-admin-modal')">
+          <i class="fa-solid fa-plus pr-2"></i>New Admin
+        </button>
+      </div>
     </div>
-
-    <div class="grid grid-cols-3 gap-4">
-      <div class="p-6 bg-white shadow rounded-lg">
-        <p class="text-sm text-gray-500">Cohort Name</p>
-        <h3 id="cohort_name" class="text-lg font-semibold">
-          <%= @cohorts.first&.cohort_name || 'No Cohorts' %>
-        </h3>
+    <div class="grid grid-cols-3 gap-5">
+      <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
+        <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Cohort Name</p>
+        <div class="flex justify-between">
+          <h3 id="cohort_name" class="text-[1.5rem] font-semibold">
+            <%= @cohorts.first&.cohort_name || 'No Cohorts' %>
+          </h3>
+          <img src="<%= asset_path('icon/category.svg') %>" class="w-[1.5rem] fill-current">
+        </div>
       </div>
-      <div class="p-6 bg-white shadow rounded-lg">
-        <p class="text-sm text-gray-500">Number of Pairing</p>
-        <h3 id="nunber_of_pairings" class="text-lg font-semibold">
-          <%= @cohorts.first&.pairing_number || '0' %> Pairs
-        </h3>
+      <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
+        <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Number of Pairing</p>
+        <div class="flex justify-between">
+          <h3 id="number_of_pairings" class="text-[1.5rem] font-semibold">
+            <%= @cohorts.first&.pairing_number || '0' %> Pairs
+          </h3>
+          <img src="<%= asset_path('icon/2_user_gray.svg') %>" class="w-[1.5rem] fill-current">
+        </div>
       </div>
-      <div class="p-6 bg-white shadow rounded-lg">
-        <p class="text-sm text-gray-500">Scheduled Meetings</p>
-        <h3 id="scheduled_meetings" class="text-lg font-semibold">N/A</h3>
+      <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
+        <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Scheduled Meetings</p>
+        <div class="flex justify-between">
+          <h3 id="scheduled_meetings" class="text-[1.5rem] font-semibold">N/A</h3>
+          <img src="<%= asset_path('icon/2_user_gray.svg') %>" class="w-[1.5rem] fill-current">
+        </div>
       </div>
     </div>
   </main>
