--- a/app/views/dashboard/admin/_survey_trend_chart.html.erb
+++ b/app/views/dashboard/admin/_survey_trend_chart.html.erb
@@ -1,16 +1,16 @@
-<div class="w-full bg-white rounded-[0.75rem] shadow-sm mt-9 p-4 md:p-10">
+<div class="w-full bg-white rounded-[0.75rem] shadow-sm mt-9 p-4 md:p-7">
   <div class="flex justify-between">
     <div>
-      <h5 class="leading-none text-3xl font-bold text-[#202020] pb-2">Mentorship Satisfaction Trend</h5>
-      <p class="text-base font-normal text-[#898989]">Explore each cohort's satisfaction at a glance
+      <h5 class="leading-none text-xl font-bold text-[#202020] pb-2">Mentorship Satisfaction Trend</h5>
+      <p class="text-sm font-normal text-[#898989]">Explore each cohort's satisfaction at a glance
         through survey.</p>
     </div>
   </div>
-  <div id="labels-chart" class="py-4"></div>
-  <div class="flex justify-end mt-5 px-4 md:px-6">
+  <div id="labels-chart" class="py-2"></div>
+  <div class="flex justify-end mt-5">
     <a
       href="#"
-      class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-[#898989] hover:text-[#202020] hover:bg-[#F7F7F7] px-3 py-2">
+      class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-[#898989] hover:text-[#202020]">
       Survey Result
       <svg class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
